# cod-stat-tracker-tui

./: .gitignore  CLAUDE.md  README.md  config.json  index.html  pyproject.toml
src/: tracker.py
tests/: test_tracker.py
